auto ship and invoice refs: https://github.com/metasfresh/metasfresh/issues/11890

--- a/backend/de.metas.business.rest-api-impl/pom.xml
+++ b/backend/de.metas.business.rest-api-impl/pom.xml
@@ -160,6 +160,11 @@
             <version>${metasfresh-common.version}</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>de.metas.order</groupId>
+            <artifactId>de-metas-order</artifactId>
+            <version>${metasfresh.version}</version>
+        </dependency>
 
     </dependencies>
 </project>
