auto ship and invoice refs: https://github.com/metasfresh/metasfresh/issues/11890

--- a/backend/de-metas-order/pom.xml
+++ b/backend/de-metas-order/pom.xml
@@ -34,6 +34,10 @@
     <groupId>de.metas.order</groupId>
     <artifactId>de-metas-order</artifactId>
 
+    <properties>
+        <metasfresh.version>10.0.0</metasfresh.version>
+    </properties>
+
     <version>10.0.0</version>
     <dependencies>
         <dependency>
