--- a/backend/de.metas.business.rest-api-impl/pom.xml
+++ b/backend/de.metas.business.rest-api-impl/pom.xml
@@ -161,8 +161,8 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>de.metas.order</groupId>
-            <artifactId>de-metas-order</artifactId>
+            <groupId>de.metas.salesorder</groupId>
+            <artifactId>de-metas-salesorder</artifactId>
             <version>${metasfresh.version}</version>
         </dependency>
 
