--- a/misc/services/camel/de-metas-camel-externalsystems/core/src/main/resources/application.properties
+++ b/misc/services/camel/de-metas-camel-externalsystems/core/src/main/resources/application.properties
@@ -24,6 +24,9 @@ metasfresh.upsert-bpartnerlocation-v2.camel.uri=direct:metasfresh-upsert-bpartne
 metasfresh.upsert-product-v2.camel.uri=direct:metasfresh-upsert-product-v2
 metasfresh.upsert-product-v2.api.uri={{metasfresh.api.v2.baseurl}}/products
 
+metasfresh.upsert-bom-v2.camel.uri=direct:metasfresh-upsert-bom-v2
+metasfresh.upsert-bom-v2.api.uri={{metasfresh.api.v2.baseurl}}/bom/version
+
 metasfresh.upsert-product-price-v2.camel.uri=direct:metasfresh-upsert-product-price-v2
 metasfresh.upsert-product-price-v2.api.uri={{metasfresh.api.v2.baseurl}}/prices/priceListVersions
 
