--- a/misc/services/mobile-webui/mobile-webui-frontend/package.json
+++ b/misc/services/mobile-webui/mobile-webui-frontend/package.json
@@ -17,6 +17,7 @@
     "classnames": "^2.3.1",
     "connected-react-router": "^6.9.1",
     "counterpart": "^0.18.6",
+    "cross-env": "^7.0.3",
     "immer": "^9.0.6",
     "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
@@ -46,8 +47,8 @@
     "workbox-streams": "^5.1.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "cross-env REACT_APP_COMMIT_VERSION=$(git rev-parse HEAD) react-scripts start",
+    "build": "cross-env REACT_APP_COMMIT_VERSION=$(git rev-parse HEAD) react-scripts build",
     "lint": "./node_modules/eslint/bin/eslint.js 'src/**/*.{js,jsx}' --quiet",
     "lintfix": "./node_modules/eslint/bin/eslint.js 'src/**/*.{js,jsx}' --fix",
     "test": "react-scripts test",
