add support for traceId on camel rest endpoints

--- a/misc/services/camel/de-metas-camel-externalsystems/core/src/main/resources/application.properties
+++ b/misc/services/camel/de-metas-camel-externalsystems/core/src/main/resources/application.properties
@@ -71,6 +71,7 @@ metasfresh.attachments.v2.api.uri={{metasfresh.api.v2.baseurl}}/attachment
 
 metasfresh.enqueue-purchases-candidate-v2.api.uri={{metasfresh.api.v2.baseurl}}/order/purchase/enqueueForOrdering
 
+metasfresh.seqno.v2.api.uri={{metasfresh.api.v2.baseurl}}/seqNo
 # --------------------------------------------------------------------------------
 # Build info
 # --------------------------------------------------------------------------------
