extend externalsystems-camel to write an audit trail (#11870)
* refs: https://github.com/metasfresh/metasfresh/issues/11863
* enhance rest EP for audit trail refs: https://github.com/metasfresh/metasfresh/issues/11863
* add decimal pattern refs: https://github.com/metasfresh/metasfresh/issues/11863
* add support for traceId on camel rest endpoints

--- a/misc/services/camel/de-metas-camel-externalsystems/core/src/main/resources/application.properties
+++ b/misc/services/camel/de-metas-camel-externalsystems/core/src/main/resources/application.properties
@@ -14,10 +14,6 @@ metasfresh.api.baseurl=http://localhost:8282/api
 metasfresh.api.v2.baseurl=http://localhost:8282/api/v2
 # override via env variable METASFRESH_ERROR-REPORT_FOLDER 
 metasfresh.error-report.folder=file://C://error-report
-# override via env variable EXTERNALSYSTEM_RAW-DATA_URI 
-# to not store the data on disk, you could do log:Raw-Data (or maybe stub:Raw-Data)
-externalSystem.raw-data.uri=file://C://raw_data
-
 
 # some port that's not yet taken on my local IDE
 server.port=8095
@@ -71,6 +67,7 @@ metasfresh.attachments.v2.api.uri={{metasfresh.api.v2.baseurl}}/attachment
 
 metasfresh.enqueue-purchases-candidate-v2.api.uri={{metasfresh.api.v2.baseurl}}/order/purchase/enqueueForOrdering
 
+metasfresh.seqno.v2.api.uri={{metasfresh.api.v2.baseurl}}/seqNo
 # --------------------------------------------------------------------------------
 # Build info
 # --------------------------------------------------------------------------------
