--- a/backend/de.metas.externalsystem/pom.xml
+++ b/backend/de.metas.externalsystem/pom.xml
@@ -80,6 +80,12 @@
             <version>${metasfresh.version}</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
