fix after-merge compile error

--- a/misc/services/camel/de-metas-camel-externalsystems/de-metas-camel-shopware6/pom.xml
+++ b/misc/services/camel/de-metas-camel-externalsystems/de-metas-camel-shopware6/pom.xml
@@ -181,6 +181,10 @@
             <version>${metasfresh-common.version}</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
