V2 BPRelationRouteBuilder refs: https://github.com/metasfresh/metasfresh/issues/11945

--- a/misc/services/camel/de-metas-camel-externalsystems/core/src/main/resources/application.properties
+++ b/misc/services/camel/de-metas-camel-externalsystems/core/src/main/resources/application.properties
@@ -43,6 +43,9 @@ metasfresh.create-purchase-candidate-v2.api.uri={{metasfresh.api.v2.baseurl}}/or
 metasfresh.upsert-bprelation.camel.uri=direct:metasfresh-upsert-bprelation
 metasfresh.upsert-bprelation.api.uri={{metasfresh.api.baseurl}}/bpartner/relation
 
+metasfresh.upsert-bprelation-v2.camel.uri=direct:metasfresh-upsert-bprelation-v2
+metasfresh.upsert-bprelation-v2.api.uri={{metasfresh.api.v2.baseurl}}/bpartner/relation
+
 metasfresh.create-externalreference.camel.uri=direct:metasfresh-create-externalreference
 metasfresh.create-externalreference.api.uri={{metasfresh.api.baseurl}}/externalRef
 
