--- a/misc/services/camel/de-metas-camel-externalsystems/ebay/de-metas-camel-ebay-camelroutes/pom.xml
+++ b/misc/services/camel/de-metas-camel-externalsystems/ebay/de-metas-camel-ebay-camelroutes/pom.xml
@@ -97,7 +97,7 @@
 		<dependency>
 			<groupId>com.ebay.auth</groupId>
 			<artifactId>ebay-oauth-java-client</artifactId>
-			<version>1.1.0</version>
+			<version>1.1.3</version>
 		</dependency>
 
 		<dependency>
@@ -201,9 +201,16 @@
 		<dependency>
 			<groupId>io.github.bonigarcia</groupId>
 			<artifactId>webdrivermanager</artifactId>
-			<version>4.4.3</version>
+			<version>5.0.3</version>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>3.141.59</version>
+            <scope>test</scope>
+        </dependency>
 
 
 	</dependencies>
