fix after-merge build problem

--- a/misc/de-metas-common/de-metas-common-util/pom.xml
+++ b/misc/de-metas-common/de-metas-common-util/pom.xml
@@ -55,6 +55,11 @@
             <version>1.7.25</version>
         </dependency>
        
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
