refs https://github.com/metasfresh/metasfresh/issues/12124

--- a/misc/services/camel/de-metas-camel-externalsystems/core/src/main/resources/application.properties
+++ b/misc/services/camel/de-metas-camel-externalsystems/core/src/main/resources/application.properties
@@ -78,6 +78,9 @@ metasfresh.seqno.v2.api.uri={{metasfresh.api.v2.baseurl}}/seqNo
 metasfresh.create-service-status-v2.camel.uri=direct:metasfresh-create-service-status-v2
 metasfresh.service-status-v2.camel.uri=direct:metasfresh-service-status-v2
 metasfresh.invoke-external-system-action-v2.camel.uri=direct:metasfresh-invoke-external-system-action-v2
+
+metasfresh.audit.sensitive-data.pattern=".*?(auth|key|pass|token).*?":(.*?"(.+?)")
+metasfresh.audit.sensitive-data.pattern.group=3
 # --------------------------------------------------------------------------------
 # Build info
 # --------------------------------------------------------------------------------
