--- a/misc/services/procurement-webui/procurement-webui-frontend/package.json
+++ b/misc/services/procurement-webui/procurement-webui-frontend/package.json
@@ -21,8 +21,8 @@
     "mobx": "6.0.4",
     "mobx-react": "7.0.5",
     "mobx-state-tree": "4.0.2",
-    "node-sass": "^4.14.1",
-    "postcss-cli": "^8.3.1",
+    "node-sass": "7.0.0",
+    "postcss-cli": "9.0.2",
     "prop-types": "^15.7.2",
     "qs": "^6.7.0",
     "react": "^17.0.1",
