--- a/misc/services/camel/de-metas-camel-externalsystems/core/src/main/resources/application.properties
+++ b/misc/services/camel/de-metas-camel-externalsystems/core/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# can be changed at runtime via: POST '/actuator/loggers/org.apache.http' with payload: {"configuredLevel": "DEBUG"}
+logging.level.org.apache.http=INFO
+
 # override via env variable CAMEL_COMPONENT_RABBITMQ_HOSTNAME
 camel.component.rabbitmq.hostname=localhost
 # override via env variable CAMEL_COMPONENT_RABBITMQ_PORT
@@ -22,7 +25,8 @@ externalSystem.raw-data.uri=file://C://raw_data
 # some port that's not yet taken on my local IDE
 server.port=8095
 
-management.endpoints.web.exposure.include=info,health,mappings,metrics,shutdown
+management.endpoints.web.exposure.include=info,health,mappings,metrics,shutdown,loggers
+management.endpoint.loggers.enabled=true
 
 metasfresh.upsert-bpartner.camel.uri=direct:metasfresh-upsert-bpartner
 metasfresh.upsert-bpartner.api.uri={{metasfresh.api.baseurl}}/bpartner
