add guava module for deserializing guava standard types

--- a/backend/de.metas.adempiere.adempiere/base/pom.xml
+++ b/backend/de.metas.adempiere.adempiere/base/pom.xml
@@ -241,6 +241,11 @@
         </dependency>
 
         <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-guava</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
