--- a/misc/services/camel/de-metas-camel-externalsystems/core/src/main/resources/application.properties
+++ b/misc/services/camel/de-metas-camel-externalsystems/core/src/main/resources/application.properties
@@ -28,6 +28,10 @@ server.port=8095
 management.endpoints.web.exposure.include=info,health,mappings,metrics,shutdown,loggers
 management.endpoint.loggers.enabled=true
 
+# Set de.metas.camel.externalsystems.actuator.auth to specify the token with which to access the actuator endpoint 
+# When calling the actuator EP, set the http-parameter X-Auth-Token to this value
+# The token can also be specified via env variable DE_METAS_CAMEL_EXTERNALSYSTEMS_ACTUATOR_AUTH
+
 metasfresh.upsert-bpartner.camel.uri=direct:metasfresh-upsert-bpartner
 metasfresh.upsert-bpartner.api.uri={{metasfresh.api.baseurl}}/bpartner
 
