--- a/misc/services/mobile-webui/mobile-webui-frontend/package.json
+++ b/misc/services/mobile-webui/mobile-webui-frontend/package.json
@@ -17,7 +17,7 @@
     "classnames": "^2.3.1",
     "connected-react-router": "^6.9.1",
     "counterpart": "^0.18.6",
-    "immer": "^9.0.6",
+    "immer": "9.0.7",
     "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
@@ -86,7 +86,7 @@
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-react": "7.24.0",
-    "node-sass": "^6.0.1",
+    "node-sass": "7.0.1",
     "prettier": "2.3.2",
     "react-hot-loader": "4.13.0"
   },
