#12185 convert Esr9 to EsrQR if feasible

--- a/backend/vertical-healthcare_ch/forum_datenaustausch_ch.invoice_450_request/pom.xml
+++ b/backend/vertical-healthcare_ch/forum_datenaustausch_ch.invoice_450_request/pom.xml
@@ -13,6 +13,10 @@
 	<version>10.0.0</version>
 	<packaging>jar</packaging>
 
+	<properties>
+		<metasfresh.version>[1,10.0.0]</metasfresh.version>
+	</properties>
+
 	<dependencies>
 
 		<dependency>
