--- a/backend/vertical-healthcare_ch/forum_datenaustausch_ch.invoice_commons/pom.xml
+++ b/backend/vertical-healthcare_ch/forum_datenaustausch_ch.invoice_commons/pom.xml
@@ -36,5 +36,17 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>de.metas.util</groupId>
+			<artifactId>de.metas.util</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>de.metas.adempiere.adempiere</groupId>
+			<artifactId>de.metas.adempiere.adempiere.base</artifactId>
+			<version>${metasfresh.version}</version>
+		</dependency>
+
 	</dependencies>
 </project>
