Lock the storybook versions as these through there deps introduced issues in the past

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,10 +54,10 @@
     "@babel/preset-react": "7.16.7",
     "@babel/register": "7.16.8",
     "@babel/runtime": "7.16.7",
-    "@storybook/addon-actions": "^6.4.12",
-    "@storybook/addon-essentials": "^6.4.12",
-    "@storybook/addon-links": "^6.4.12",
-    "@storybook/react": "^6.4.12",
+    "@storybook/addon-actions": "6.4.12",
+    "@storybook/addon-essentials": "6.4.12",
+    "@storybook/addon-links": "6.4.12",
+    "@storybook/react": "6.4.12",
     "@testing-library/dom": "8.11.1",
     "@testing-library/react": "12.1.2",
     "@welldone-software/why-did-you-render": "6.2.3",
