introduce de.metas.handlingunits.webui project

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -126,6 +126,7 @@
         <module>de.metas.material</module>
 
         <module>de.metas.handlingunits.base</module>
+        <module>de.metas.handlingunits.webui</module>
 
         <module>de.metas.payment.esr</module>
         <module>de.metas.payment.sepa</module>
