--- a/backend/metasfresh-webui-api/pom.xml
+++ b/backend/metasfresh-webui-api/pom.xml
@@ -35,6 +35,13 @@
 			<version>${metasfresh.version}</version>
 		</dependency>
 
+
+		<dependency>
+			<groupId>de.metas.handlingunits</groupId>
+			<artifactId>de.metas.handlingunits.webui</artifactId>
+			<version>${metasfresh.version}</version>
+		</dependency>
+
 		<!-- logging -->
 		<!-- logstash-logback-encoder and janino are related to https://github.com/metasfresh/metasfresh/issues/1504 -->
 		<dependency>
