--- a/misc/services/camel/de-metas-camel-externalsystems/core/src/main/resources/application.properties
+++ b/misc/services/camel/de-metas-camel-externalsystems/core/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+# (note: the rules for finding the env-variable to a property are here: https://docs.spring.io/spring-boot/docs/current/reference/html/features.html#features.external-config.typesafe-configuration-properties.relaxed-binding.environment-variables)
+
 # override via env variable CAMEL_COMPONENT_RABBITMQ_HOSTNAME
 camel.component.rabbitmq.hostname=localhost
 # override via env variable CAMEL_COMPONENT_RABBITMQ_PORT
@@ -12,7 +14,7 @@ metasfresh.api.authtoken=<secret>
 metasfresh.api.baseurl=http://localhost:8282/api
 # override via env variable METASFRESH_API_V2_BASEURL
 metasfresh.api.v2.baseurl=http://localhost:8282/api/v2
-# override via env variable METASFRESH_ERROR-REPORT_FOLDER 
+# override via env variable METASFRESH_ERRORREPORT_FOLDER
 metasfresh.error-report.folder=file://C://error-report
 
 # some port that's not yet taken on my local IDE
