add awesomefonts, change a bit the applications screen (still shit)

--- a/misc/services/mobile-webui/mobile-webui-frontend/package.json
+++ b/misc/services/mobile-webui/mobile-webui-frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "license": "GPL 2",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "@redux-offline/redux-offline": "^2.6.0",
     "@reduxjs/toolkit": "^1.6.1",
     "@stomp/stompjs": "^6.1.2",
