--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,6 +54,11 @@
     "@babel/preset-react": "7.16.7",
     "@babel/register": "7.16.9",
     "@babel/runtime": "7.16.7",
+    "@mdx-js/loader": "1.6.22",
+    "@mdx-js/mdx": "1.6.22",
+    "@mdx-js/react": "1.6.22",
+    "@mdx-js/runtime": "1.6.22",
+    "@next/mdx": "12.0.8",
     "@storybook/addon-actions": "6.4.12",
     "@storybook/addon-docs": "6.4.12",
     "@storybook/addon-essentials": "6.4.12",
@@ -120,12 +125,7 @@
     "webpack": "5.66.0",
     "webpack-cli": "4.9.1",
     "webpack-dev-server": "4.7.3",
-    "webpack-node-externals": "3.0.0",
-    "@mdx-js/loader": "1.6.22",
-    "@mdx-js/mdx": "1.6.22",
-    "@mdx-js/react": "1.6.22",
-    "@mdx-js/runtime": "1.6.22",
-    "@next/mdx": "12.0.8"
+    "webpack-node-externals": "3.0.0"
   },
   "dependencies": {
     "@fullcalendar/core": "5.10.1",
@@ -167,8 +167,8 @@
     "react-datetime": "2.16.3",
     "react-debounce-input": "3.2.2",
     "react-deep-force-update": "2.1.3",
-    "react-dnd": "2.5.4",
-    "react-dnd-html5-backend": "2.5.4",
+    "react-dnd": "14.0.5",
+    "react-dnd-html5-backend": "14.1.0",
     "react-dom": "16.14.0",
     "react-dropzone": "4.2.9",
     "react-infinite-scroller": "1.2.4",
