#12401 update react to 17 and enzyme adapter to supporting version

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,6 +54,11 @@
     "@babel/preset-react": "7.16.7",
     "@babel/register": "7.16.9",
     "@babel/runtime": "7.16.7",
+    "@mdx-js/loader": "1.6.22",
+    "@mdx-js/mdx": "1.6.22",
+    "@mdx-js/react": "1.6.22",
+    "@mdx-js/runtime": "1.6.22",
+    "@next/mdx": "12.0.8",
     "@storybook/addon-actions": "6.4.12",
     "@storybook/addon-docs": "6.4.12",
     "@storybook/addon-essentials": "6.4.12",
@@ -62,6 +67,7 @@
     "@testing-library/dom": "8.11.1",
     "@testing-library/react": "12.1.2",
     "@welldone-software/why-did-you-render": "6.2.3",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
     "autoprefixer": "10.4.2",
     "axios-mock-adapter": "1.20.0",
     "babel-jest": "27.4.6",
@@ -73,7 +79,6 @@
     "core-js": "3.20.2",
     "css-loader": "6.5.1",
     "enzyme": "3.11.0",
-    "enzyme-adapter-react-16": "1.15.6",
     "enzyme-redux": "0.2.1",
     "enzyme-wait": "1.0.9",
     "eslint": "8.6.0",
@@ -120,12 +125,7 @@
     "webpack": "5.66.0",
     "webpack-cli": "4.9.1",
     "webpack-dev-server": "4.7.3",
-    "webpack-node-externals": "3.0.0",
-    "@mdx-js/loader": "1.6.22",
-    "@mdx-js/mdx": "1.6.22",
-    "@mdx-js/react": "1.6.22",
-    "@mdx-js/runtime": "1.6.22",
-    "@next/mdx": "12.0.8"
+    "webpack-node-externals": "3.0.0"
   },
   "dependencies": {
     "@fullcalendar/core": "5.10.1",
@@ -161,7 +161,7 @@
     "query-string": "7.1.0",
     "rc-hammerjs": "0.6.10",
     "re-reselect": "4.0.0",
-    "react": "16.14.0",
+    "react": "17.0.2",
     "react-autosuggest": "9.4.3",
     "react-bootstrap-daterangepicker": "3.4.1",
     "react-datetime": "2.16.3",
@@ -169,7 +169,7 @@
     "react-deep-force-update": "2.1.3",
     "react-dnd": "2.5.4",
     "react-dnd-html5-backend": "2.5.4",
-    "react-dom": "16.14.0",
+    "react-dom": "17.0.2",
     "react-dropzone": "4.2.9",
     "react-infinite-scroller": "1.2.4",
     "react-interpolate-component": "0.12.0",
