--- a/misc/services/camel/de-metas-camel-externalsystems/common/pom.xml
+++ b/misc/services/camel/de-metas-camel-externalsystems/common/pom.xml
@@ -89,6 +89,18 @@
             <artifactId>de-metas-common-manufacturing</artifactId>
             <version>${metasfresh-common.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-http-common</artifactId>
+            <version>${camel.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.camel.springboot</groupId>
+            <artifactId>camel-http-starter</artifactId>
+            <version>${camel.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
