--- a/misc/services/camel/de-metas-camel-externalsystems/pom.xml
+++ b/misc/services/camel/de-metas-camel-externalsystems/pom.xml
@@ -36,5 +36,17 @@
             <version>1.18.22</version>
         </dependency>
     </dependencies>
-    
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
