--- a/misc/services/camel/de-metas-camel-externalsystems/core/src/main/resources/application.properties
+++ b/misc/services/camel/de-metas-camel-externalsystems/core/src/main/resources/application.properties
@@ -82,10 +82,10 @@ metasfresh.service-status-v2.camel.uri=direct:metasfresh-service-status-v2
 metasfresh.invoke-external-system-action-v2.camel.uri=direct:metasfresh-invoke-external-system-action-v2
 
 metasfresh.retrieve-hu-v2.camel.uri=direct:metasfresh-retrieve-hu-v2
-metasfresh.retrieve-hu-v2.api.uri={{metasfresh.api.v2.baseurl}}/hu/byId
+metasfresh.retrieve-hu-v2.api.uri={{metasfresh.api.v2.baseurl}}/material/handlingunits/byId
 
 metasfresh.update-hu-attributes-v2.camel.uri=direct:metasfresh-retrieve-hu-v2
-metasfresh.update-hu-attributes-v2.api.uri={{metasfresh.api.v2.baseurl}}/hu
+metasfresh.update-hu-attributes-v2.api.uri={{metasfresh.api.v2.baseurl}}/material/handlingunits
 
 metasfresh.audit.sensitive-data.pattern=".*?(auth|key|pass|token).*?":(.*?"(.+?)")
 metasfresh.audit.sensitive-data.pattern.group=3
