refs: https://github.com/metasfresh/metasfresh/issues/12478

--- a/misc/services/camel/de-metas-camel-externalsystems/core/src/main/resources/application.properties
+++ b/misc/services/camel/de-metas-camel-externalsystems/core/src/main/resources/application.properties
@@ -91,6 +91,8 @@ metasfresh.search-externalreference.v2.api.uri={{metasfresh.api.v2.baseurl}}/ext
 
 metasfresh.audit.sensitive-data.pattern=".*?(auth|key|pass|token).*?":(.*?"(.+?)")
 metasfresh.audit.sensitive-data.pattern.group=3
+
+metasfresh.external-system-info-v2.camel.uri=direct:metasfresh-external-system-info-v2
 # --------------------------------------------------------------------------------
 # Build info
 # --------------------------------------------------------------------------------
