--- a/misc/services/camel/de-metas-camel-edi/pom.xml
+++ b/misc/services/camel/de-metas-camel-edi/pom.xml
@@ -17,7 +17,8 @@
     <properties>
         <java.version>14</java.version>
         <spring-boot.version>2.3.1.RELEASE</spring-boot.version>
-        <camel.version>3.4.2</camel.version>
+<!--        <camel.version>3.4.2</camel.version>-->
+        <camel.version>3.14.1</camel.version>
         <guava.version>30.1.1-jre</guava.version>
         <smooks.version>1.7.1</smooks.version>
         <jackson.version>2.11.0</jackson.version>
