--- a/backend/de.metas.device.adempiere/pom.xml
+++ b/backend/de.metas.device.adempiere/pom.xml
@@ -37,6 +37,12 @@
         </dependency>
 
         <dependency>
+            <groupId>de.metas.global_qrcode</groupId>
+            <artifactId>de.metas.global_qrcode.api</artifactId>
+            <version>10.0.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
