--- a/misc/services/camel/de-metas-camel-edi/pom.xml
+++ b/misc/services/camel/de-metas-camel-edi/pom.xml
@@ -21,6 +21,7 @@
         <guava.version>30.1.1-jre</guava.version>
         <smooks-cartridge.version>2.0.0-M3</smooks-cartridge.version>
         <jackson.version>2.11.0</jackson.version>
+        <lombok.version>1.18.22</lombok.version>
         <org.apache.poi.version>3.15</org.apache.poi.version>
         <jaxb.packageName>de.metas.edi.esb.jaxb.metasfresh</jaxb.packageName>
         <jaxb.orders.packageName>de.metas.edi.esb.jaxb.stepcom.orders</jaxb.orders.packageName>
@@ -164,6 +165,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
 
@@ -362,10 +364,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.0</version>
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
-                    <forceJavacCompilerUse>true</forceJavacCompilerUse>
+                    <!-- <forceJavacCompilerUse>true</forceJavacCompilerUse> -->
                 </configuration>
             </plugin>
 
