--- a/misc/services/camel/de-metas-camel-edi/pom.xml
+++ b/misc/services/camel/de-metas-camel-edi/pom.xml
@@ -16,11 +16,11 @@
     <version>10.0.0</version>
     <properties>
         <java.version>17</java.version>
-        <spring-boot.version>2.3.1.RELEASE</spring-boot.version>
+        <spring-boot.version>2.6.3</spring-boot.version>
         <camel.version>3.14.1</camel.version>
         <guava.version>30.1.1-jre</guava.version>
         <smooks-cartridge.version>2.0.0-M3</smooks-cartridge.version>
-        <jackson.version>2.11.0</jackson.version>
+        <jackson.version>2.13.1</jackson.version>
         <lombok.version>1.18.22</lombok.version>
         <org.apache.poi.version>3.15</org.apache.poi.version>
         <jaxb.packageName>de.metas.edi.esb.jaxb.metasfresh</jaxb.packageName>
@@ -219,13 +219,13 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.6.2</version>
+            <version>5.8.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.6.2</version>
+            <version>5.8.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
