attempt to fix smooks problem

--- a/misc/services/camel/de-metas-camel-edi/pom.xml
+++ b/misc/services/camel/de-metas-camel-edi/pom.xml
@@ -179,7 +179,12 @@
             <artifactId>smooks-templating-cartridge</artifactId>
             <version>${smooks-cartridge.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.smooks.cartridges</groupId>
+            <artifactId>smooks-fixed-length-cartridge</artifactId>
+            <version>${smooks-cartridge.version}</version>
+        </dependency>
+        
         <dependency>
             <artifactId>commons-logging</artifactId>
             <groupId>commons-logging</groupId>
