--- a/backend/de.metas.global_qrcode.api/pom.xml
+++ b/backend/de.metas.global_qrcode.api/pom.xml
@@ -3,10 +3,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <artifactId>de.metas.parent.general</artifactId>
+        <artifactId>de.metas.parent</artifactId>
         <groupId>de.metas</groupId>
         <version>10.0.0</version>
-        <relativePath>../../misc/parent-pom/pom.xml</relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <groupId>de.metas.global_qrcode</groupId>
