de.metas.parent/pom.xml: disable enforcer plugin (as discussed with Tobias)

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -32,7 +32,7 @@
 
         <spring-boot.version>2.4.3</spring-boot.version>
         <lucene.version>8.6.2</lucene.version>
-        
+
         <!-- Note that we need spring in de.metas.report.jasper.client and ...jasper.server.base for some reason. -->
         <!-- For versions info, see https://docs.spring.io/spring-boot/docs/current/reference/html/appendix-dependency-versions.html -->
         <spring.version>5.3.4</spring.version>
@@ -607,6 +607,15 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+
+            <!-- Disable the f..ing stupid false positive giver enforcer plugin (teo, tobi) -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
             </plugin>
         </plugins>
     </build>
