--- a/misc/services/camel/de-metas-camel-edi/pom.xml
+++ b/misc/services/camel/de-metas-camel-edi/pom.xml
@@ -15,12 +15,13 @@
     <artifactId>de-metas-camel-edi</artifactId>
     <version>10.0.0</version>
     <properties>
-        <java.version>14</java.version>
-        <spring-boot.version>2.3.1.RELEASE</spring-boot.version>
+        <java.version>17</java.version>
+        <spring-boot.version>2.6.3</spring-boot.version>
         <camel.version>3.14.1</camel.version>
         <guava.version>30.1.1-jre</guava.version>
         <smooks-cartridge.version>2.0.0-M3</smooks-cartridge.version>
-        <jackson.version>2.11.0</jackson.version>
+        <jackson.version>2.13.1</jackson.version>
+        <lombok.version>1.18.22</lombok.version>
         <org.apache.poi.version>3.15</org.apache.poi.version>
         <jaxb.packageName>de.metas.edi.esb.jaxb.metasfresh</jaxb.packageName>
         <jaxb.orders.packageName>de.metas.edi.esb.jaxb.stepcom.orders</jaxb.orders.packageName>
@@ -164,6 +165,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
 
@@ -177,7 +179,12 @@
             <artifactId>smooks-templating-cartridge</artifactId>
             <version>${smooks-cartridge.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.smooks.cartridges</groupId>
+            <artifactId>smooks-fixed-length-cartridge</artifactId>
+            <version>${smooks-cartridge.version}</version>
+        </dependency>
+        
         <dependency>
             <artifactId>commons-logging</artifactId>
             <groupId>commons-logging</groupId>
@@ -217,13 +224,13 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.6.2</version>
+            <version>5.8.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.6.2</version>
+            <version>5.8.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -346,16 +353,15 @@
                     </execution>
                 </executions>
                 <dependencies>
-                    <!-- without this dependency, XJC fails with a very obscur error! Thx to https://stackoverflow.com/a/58800280/1012103-->
-<!--                    <dependency>-->
-<!--                        <groupId>jakarta.xml.bind</groupId>-->
-<!--                        <artifactId>jakarta.xml.bind-api</artifactId>-->
-<!--                        <version>2.3.2</version>-->
-<!--                    </dependency>-->
                     <dependency>
                         <groupId>javax.xml.bind</groupId>
                         <artifactId>jaxb-api</artifactId>
-                        <version>2.2.11</version>
+                        <version>2.3.1</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.glassfish.jaxb</groupId>
+                        <artifactId>jaxb-runtime</artifactId>
+                        <version>2.3.1</version>
                     </dependency>
                 </dependencies>
             </plugin>
@@ -363,10 +369,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.0</version>
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
-                    <forceJavacCompilerUse>true</forceJavacCompilerUse>
                 </configuration>
             </plugin>
 
