--- a/misc/services/camel/de-metas-camel-externalsystems/core/src/main/resources/application.properties
+++ b/misc/services/camel/de-metas-camel-externalsystems/core/src/main/resources/application.properties
@@ -93,6 +93,9 @@ metasfresh.audit.sensitive-data.pattern=".*?(auth|key|pass|token).*?":(.*?"(.+?)
 metasfresh.audit.sensitive-data.pattern.group=3
 
 metasfresh.external-system-info-v2.camel.uri=direct:metasfresh-external-system-info-v2
+
+metasfresh.clear-hu-v2.camel.uri=direct:metasfresh-clear-hu-v2
+metasfresh.clear-hu-v2.api.uri={{metasfresh.api.v2.baseurl}}/material/handlingunits
 # --------------------------------------------------------------------------------
 # Build info
 # --------------------------------------------------------------------------------
