--- a/backend/de.metas.adempiere.adempiere/base/pom.xml
+++ b/backend/de.metas.adempiere.adempiere/base/pom.xml
@@ -227,22 +227,10 @@
             <version>4.1</version>
         </dependency>
 
-        <!-- needed for org.adempiere.plaf.UIDefaultsSerializer -->
+        <!-- legacy, needed for org.adempiere.plaf.UIDefaultsSerializer -->
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-        </dependency>
-
-        <!-- we use this for its "capability of serializing java.time objects with the Jackson core".  -->
-        <!-- jackson itself is pulled in via spring-boot -->
-        <dependency>
-            <groupId>com.fasterxml.jackson.datatype</groupId>
-            <artifactId>jackson-datatype-jsr310</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.fasterxml.jackson.datatype</groupId>
-            <artifactId>jackson-datatype-guava</artifactId>
         </dependency>
 
         <dependency>
