--- a/backend/de.metas.global_qrcode.services/pom.xml
+++ b/backend/de.metas.global_qrcode.services/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <groupId>de.metas.global_qrcode</groupId>
-    <artifactId>de.metas.global_qrcode.api</artifactId>
+    <artifactId>de.metas.global_qrcode.services</artifactId>
     <version>10.0.0</version>
     <packaging>jar</packaging>
 
@@ -19,11 +19,28 @@
     </properties>
 
     <dependencies>
-        <!-- IMPORTANT: pls keep it light. Don't add any metasfresh dependencies here -->
+        <dependency>
+            <groupId>de.metas.global_qrcode</groupId>
+            <artifactId>de.metas.global_qrcode.api</artifactId>
+            <version>10.0.0</version>
+        </dependency>
 
         <dependency>
-            <groupId>de.metas.util</groupId>
-            <artifactId>de.metas.util</artifactId>
+            <groupId>de.metas.adempiere.adempiere</groupId>
+            <artifactId>de.metas.adempiere.adempiere.base</artifactId>
+            <version>10.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>de.metas.adempiere.adempiere</groupId>
+            <artifactId>de.metas.adempiere.adempiere.base</artifactId>
+            <version>10.0.0</version>
+            <classifier>tests</classifier>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>de.metas.report</groupId>
+            <artifactId>de.metas.report.jasper.client</artifactId>
             <version>10.0.0</version>
         </dependency>
 
