--- a/backend/de.metas.handlingunits.base/pom.xml
+++ b/backend/de.metas.handlingunits.base/pom.xml
@@ -72,7 +72,7 @@
 
         <dependency>
             <groupId>de.metas.global_qrcode</groupId>
-            <artifactId>de.metas.global_qrcode.api</artifactId>
+            <artifactId>de.metas.global_qrcode.services</artifactId>
             <version>10.0.0</version>
         </dependency>
 
