--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -74,6 +74,7 @@
         <module>de.metas.aggregation</module>
 
         <module>de.metas.global_qrcode.api</module>
+        <module>de.metas.global_qrcode.services</module>
         <module>de.metas.business</module>
 
         <module>de.metas.business.rest-api</module>
