fix missing quotes in values.yaml

--- a/distribution/kubernetes/metasfresh-helm/templates/app.yaml
+++ b/distribution/kubernetes/metasfresh-helm/templates/app.yaml
@@ -56,9 +56,9 @@ spec:
         - name: DEBUG_PORT
           value: '{{ .Values.app.port.debug }}'
         - name: DEBUG_PRINT_BASH_CMDS
-          value: '{{ .Values.app.debug.printBashCmds }}'
+          value: {{ .Values.app.debug.printBashCmds }}
         - name: DEBUG_SUSPEND
-          value: '{{ .Values.app.debug.suspend }}'
+          value: {{ .Values.app.debug.suspend }}
         #db
         - name: DB_HOST
           value: metasfresh-{{ .Release.Name }}-db
