--- a/distribution/kubernetes/metasfresh-helm/templates/webapi.yaml
+++ b/distribution/kubernetes/metasfresh-helm/templates/webapi.yaml
@@ -49,6 +49,7 @@ spec:
         env:
         - name: WEBUI_FRONTEND_URL
           value: {{ .Values.webui.webuiAPIClient.protocol }}://{{ .Values.ingress.webui.url }}
+        - name: DB_CONNECTION_POOL_MAX_SIZE
         #db
         - name: DB_HOST
           value: metasfresh-{{ .Release.Name }}-db
@@ -64,6 +65,8 @@ spec:
             secretKeyRef:
               name: metasfresh-{{ .Release.Name }}-db-secret
               key: password
+        - name: DB_CONNECTION_POOL_MAX_SIZE
+          value: '{{ .Values.db.dbConnectionPoolMaxSize }}'
         #search
         - name: ES_HOST
           value: metasfresh-{{ .Release.Name }}-search
@@ -88,7 +91,7 @@ spec:
         - name: APP_HOST
           value: metasfresh-{{ .Release.Name }}-app
         volumeMounts:
-        - mountPath: /opt/metasfresh/log
+        - mountPath: /opt/metasfresh/metasfresh-webui-api/log
           name: log
         - mountPath: /opt/metasfresh/metasfresh-webui-api/heapdump
           name: heapdump
