--- a/distribution/kubernetes/metasfresh-helm/templates/ingress.yaml
+++ b/distribution/kubernetes/metasfresh-helm/templates/ingress.yaml
@@ -6,10 +6,11 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
-  # tls:
-  # - hosts:
-  #   - demouser-demo.metasfresh.com
-  #   secretName: tls-certificate
+  {{ if .Values.ingress.tls.enabled }}
+  tls:
+  - hosts:
+    secretName: metasfresh-{{ .Release.Name }}-tls-secret
+  {{ end }}
   rules:
   - host: {{ .Values.ingress.webui.url }}
     http:
@@ -20,8 +21,8 @@ spec:
           service:
             name: metasfresh-{{ .Release.Name }}-webui
             port:
-              number: {{ .Values.webui.webuiAPIClient.port }}
-  {{- if .Values.ingress.pgadmin.enabled }}
+              number: {{ .Values.webui.port.webui }}
+  {{ if .Values.ingress.pgadmin.enabled }}
   - host: {{ .Values.ingress.pgadmin.url }}
     http:
       paths:
@@ -32,8 +33,8 @@ spec:
             name: metasfresh-{{ .Release.Name }}-pgadmin
             port:
               number: {{ .Values.pgadmin.port.pgadmin }}
-  {{- end }}
-  {{- if .Values.ingress.app.enabled }}
+  {{ end }}
+  {{ if .Values.ingress.app.enabled }}
   - host: {{ .Values.ingress.app.url }}
     http:
       paths:
@@ -44,8 +45,8 @@ spec:
             name: metasfresh-{{ .Release.Name }}-app
             port:
               number: {{ .Values.app.port.debug }}
-  {{- end }}
-  {{- if .Values.ingress.rabbitmq.enabled }}
+  {{ end }}
+  {{ if .Values.ingress.rabbitmq.enabled }}
   - host: {{ .Values.ingress.rabbitmq.url }}
     http:
       paths:
@@ -56,8 +57,8 @@ spec:
             name: metasfresh-{{ .Release.Name }}-rabbitmq
             port:
               number: {{ .Values.rabbitmq.port.management }}
-  {{- end }}
-  {{- if .Values.ingress.webapi.enabled }}
+  {{ end }}
+  {{ if .Values.ingress.webapi.enabled }}
   - host: {{ .Values.ingress.webapi.url }}
     http:
       paths:
@@ -68,6 +69,6 @@ spec:
             name: metasfresh-{{ .Release.Name }}-webapi
             port:
               number: {{ .Values.webapi.port.debug }}
-  {{- end }}
+  {{ end }}
 
   
