--- a/distribution/kubernetes/metasfresh-helm/values.yaml
+++ b/distribution/kubernetes/metasfresh-helm/values.yaml
@@ -10,8 +10,8 @@ app:
     printBashCmds: '"n"'
 
 db:
-  image: dockerhub.metasfresh.com/postgres:14.2
-  imageInit: nexus.metasfresh.com:6001/metasfresh/metasfresh-db-init-pg-14-2:master_dockerimages_5.175.2_22_masterdockerimages
+  image: dockerhub.metasfresh.com/postgres:9.5
+  imageInit: docker.metasfresh.com/metasfresh/metasfresh-db-init-pg-9-5:master_LATEST
   urlSeedDump: https://metasfresh.com/wp-content/releases/db_seeds/metasfresh_latest.pgdump
   urlMigrationScript: https://repo.metasfresh.com/repository/mvn-master_dockerimages-releases/de/metas/dist/metasfresh-dist-dist/5.175.2-2%2Bmasterdockerimages/metasfresh-dist-dist-5.175.2-2%2Bmasterdockerimages-sql-only.tar.gz
   name: metasfresh
@@ -55,13 +55,7 @@ webapi:
 webui:
   image: nexus.metasfresh.com:6001/metasfresh/metasfresh-webui-dev:master_dockerimages_5.175.2_3_masterdockerimages
   port:
-    http: 80
-    https: 443
-  webuiAPIClient:
-    protocol: http
-    port: 80
-  webuiAPIProxypass:
-    protocol: http
+    webui: 80
 
 ingress:
   webui:
@@ -77,6 +71,8 @@ ingress:
     enabled: false
   webapi:
     url: webapi-debug.demouser-demo.metasfresh.com
+    enabled: false
+  tls:
     enabled: false
 
     
