--- a/distribution/kubernetes/metasfresh-helm/values.yaml
+++ b/distribution/kubernetes/metasfresh-helm/values.yaml
@@ -1,5 +1,5 @@
 app:
-  image: nexus.metasfresh.com:6001/metasfresh/metasfresh-app:master_dockerimages_5.175.2_1_masterdockerimages
+  image: nexus.metasfresh.com:6001/metasfresh/metasfresh-app:master_dockerimages_5.175.2_36_masterdockerimages
   port:
     app: 8282
     debug: 8788
@@ -10,10 +10,10 @@ app:
     printBashCmds: '"n"'
 
 db:
-  image: dockerhub.metasfresh.com/postgres:9.5
-  imageInit: docker.metasfresh.com/metasfresh/metasfresh-db-init-pg-9-5:master_LATEST
-  urlSeedDump: https://metasfresh.com/wp-content/releases/db_seeds/metasfresh_latest.pgdump
-  urlMigrationScript: https://repo.metasfresh.com/repository/mvn-master_dockerimages-releases/de/metas/dist/metasfresh-dist-dist/5.175.2-2%2Bmasterdockerimages/metasfresh-dist-dist-5.175.2-2%2Bmasterdockerimages-sql-only.tar.gz
+  image: dockerhub.metasfresh.com/postgres:14.2
+  imageInit: nexus.metasfresh.com:6001/metasfresh/metasfresh-db-init-pg-14-2:master_dockerimages_5.175.2_36_masterdockerimages
+  urlSeedDump: https://nexus.metasfresh.com/repository/mvn-release-releases/de/metas/dist/metasfresh-dist-dist/5.173/metasfresh-dist-dist-5.173-customfmt.pgdump
+  urlMigrationScript: https://repo.metasfresh.com/repository/mvn-master_dockerimages-releases/de/metas/dist/metasfresh-dist-dist/5.175.2-36%2Bmasterdockerimages/metasfresh-dist-dist-5.175.2-36%2Bmasterdockerimages-sql-only.tar.gz
   name: metasfresh
   port: 
     db: 5432
@@ -47,7 +47,7 @@ pgadmin:
   defaultPassword: metasfresh
 
 webapi:
-  image: nexus.metasfresh.com:6001/metasfresh/metasfresh-webui-api:master_dockerimages_5.175.2_2_masterdockerimages
+  image: exus.metasfresh.com:6001/metasfresh/metasfresh-webui-api:master_dockerimages_5.175.2_36_masterdockerimages
   port:
     webapi: 8080
     debug: 8789
