--- a/distribution/kubernetes/datacenter/metasfresh-helm/templates/db.yaml
+++ b/distribution/kubernetes/datacenter/metasfresh-helm/templates/db.yaml
@@ -41,11 +41,16 @@ spec:
         imagePullPolicy: IfNotPresent
         ports:
           - containerPort: {{ .Values.db.port.db }}
+        env:
+        # - name: POSTGRES_HOST_AUTH_METHOD
+        #   value: trust
+        - name: PGDATA
+          value: /db/data
         args: ["-cconfig_file=/etc/postgresql/postgresql.conf"]
         volumeMounts:
         - mountPath: /etc/postgresql
           name: postgresql-config
-        - mountPath: /var/lib/postgresql/data
+        - mountPath: db
           name: data
         - mountPath: /var/log/postgresql
           name: log
@@ -56,14 +61,22 @@ spec:
           name: host-timezone
           readOnly: true
       initContainers:
+        - name: data-permission-fix
+          image: busybox
+          command: ['sh', '-c', 'chmod -R 777 /db']
+          volumeMounts:
+          - name: data
+            mountPath: /db             
         - name: init-postgres
           image: {{ .Values.db.imageInit }}
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           env:
           - name: DB_NAME
             value: {{ .Values.db.name }}
           - name: DB_PORT
             value: '{{ .Values.db.port.db }}'
+          - name: PGDATA
+            value: /db/data
           - name: DB_USER
             valueFrom:
               secretKeyRef:
@@ -87,16 +100,15 @@ spec:
           - name: host-timezone
             mountPath: /etc/timezone
             readOnly: true
-          - mountPath: /var/lib/postgresql/data
-            name: data
+          - name: data
+            mountPath: db
       volumes:
       - name: postgresql-config
         configMap:
           name: metasfresh-{{ .Release.Namespace }}-db-configmap
       - name: data
-        hostPath:
-          path: /volumes/{{ .Release.Namespace }}/db/data
-          type: DirectoryOrCreate
+        persistentVolumeClaim:
+          claimName: db-data
       - name: log
         hostPath:
           path: /volumes/{{ .Release.Namespace }}/db/log
@@ -107,3 +119,18 @@ spec:
       - name: host-timezone
         hostPath:
           path: /etc/timezone
+
+---
+
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: db-data
+  namespace: {{ .Release.Namespace }}
+spec:
+  accessModes:
+  - ReadWriteOnce
+  resources:
+    requests:
+      storage: 5Gi
+  storageClassName: do-block-storage
